# Advanced_Numerical_Methods

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.old  .gitlab-ci_tmp.yml  .gitmodules  CMakeLists.txt  README.md  low_rank_test.cpp
BEM/2DParametricBEM/: .gitignore  CMakeLists.txt  README.md
BEM/2DParametricBEM/Tests/: CMakeLists.txt  parametrization_tests.cpp  parametrization_tests_gtest.cpp
BEM/2DParametricBEM/doxygen/: CMakeLists.txt  Doxyfile
BEM/2DParametricBEM/examples/: CMakeLists.txt  README.md  dirichlet_example.cpp  log.cpp  plot.py  plot_sl.py  single_layer_circle_test.cpp  sl_circle_test_eigs.txt
BEM/2DParametricBEM/include/: 1_9_a.cpp  abstract_bem_space.hpp  abstract_parametrized_curve.hpp  adj_double_layer.hpp  continuous_space.hpp  dirichlet.hpp  discontinuous_space.hpp  double_layer.hpp  gauleg.hpp  gradient_descent.hpp  hypersingular.hpp  integral_gauss.hpp  logweight_quadrature.hpp  neumann.hpp  parametrized_circular_arc.hpp  parametrized_fourier_sum.hpp  parametrized_line.hpp  parametrized_mesh.hpp  parametrized_semi_circle.hpp  single_layer.hpp
BEM/2DParametricBEM/src/: CMakeLists.txt  adj_double_layer.cpp  double_layer.cpp  hypersingular.cpp  parametrized_mesh.cpp  single_layer.cpp
BEM/2DParametricBEM/test/: CMakeLists.txt  convergence_plot.py  convergence_test.cpp  parametrization_tests_gtest.cpp  tests.cpp
BEM/BETL-Debug/templates/: CMakeLists.txt  main.cpp
BEM/CppHilbert/Examples/: CMakeLists.txt  test.cpp  test_build.cpp  test_evaluate.cpp
BEM/DirGalBEM/: CMakeLists.txt  DBEMmain.cpp  DirectBEM.hpp  IndirectBEM.hpp  MeshGen.hpp  description.json  kitemesh.eps  plot_convergenceDBEM2k.py
BEM/DirGalBEM/solutions/: DBEMmain.cpp  DirectBEM.hpp  IndirectBEM.hpp  MeshGen.hpp  plot_convergenceDBEM.py  plot_convergenceDBEML2.py  plot_convergenceIBEM.py
BEM/DirGalBEM/solutions_nolabels/: CMakeLists.txt  DBEMmain.cpp  DirectBEM.hpp  IndirectBEM.hpp  MeshGen.hpp  plot_convergenceDBEM1k.py  plot_convergenceDBEML2.py  plot_convergenceIBEM.py
BEM/DirGalBEM/templates/: DBEMmain.cpp  DirectBEM.hpp  IndirectBEM.hpp  MeshGen.hpp
BEM/DirGalBEM/templates_nolabels/: CMakeLists.txt  DBEMmain.cpp  DirectBEM.hpp  IndirectBEM.hpp  MeshGen.hpp
BEM/LogWeightedGaussRule/templates_nolabels/: CMakeLists.txt  genLaguerreRule.hpp  main.cpp
CONVQUAD/: CMakeLists.txt
CONVQUAD/AbelIntegralEquation/: AbelIntegralEquation.cpp  CMakeLists.txt  description.json
CONVQUAD/AbelIntegralEquation/all/: CMakeLists.txt  abelintegralequation.h  abelintegralequation_main.cpp  utilities.h
CONVQUAD/AbelIntegralEquation/mastersolution/: abelintegralequation.h  abelintegralequation_main.cpp
CONVQUAD/AbelIntegralEquation/mysolution/: abelintegralequation.cpp  abelintegralequation.h  abelintegralequation_main.cpp  dependencies.cmake  gauleg.h  utilities.h
CONVQUAD/AbelIntegralEquation/solutions/: AbelIntegralEquation.cpp
CONVQUAD/AbelIntegralEquation/solutions_nolabels/: AbelIntegralEquation.cpp  gauleg.hpp
CONVQUAD/AbelIntegralEquation/templates/: AbelIntegralEquation.cpp  abelintegralequation.cpp  abelintegralequation.h  abelintegralequation_main.cpp
CONVQUAD/AbelIntegralEquation/templates_nolabels/: AbelIntegralEquation.cpp  utilities.hpp
CONVQUAD/AbsorbingBoundaryCondition/: AbsorbingBoundaryCondition.cpp  CMakeLists.txt  description.json
CONVQUAD/AbsorbingBoundaryCondition/all/: absorbingboundarycondition.h  absorbingboundarycondition_main.cpp
CONVQUAD/AbsorbingBoundaryCondition/mastersolution/: absorbingboundarycondition.h  absorbingboundarycondition_main.cpp  plot.py
CONVQUAD/AbsorbingBoundaryCondition/mysolution/: absorbingboundarycondition.h  absorbingboundarycondition_main.cpp  dependencies.cmake
CONVQUAD/AbsorbingBoundaryCondition/solutions/: AbelIntegralEquation.cpp  AbsorbingBoundaryCondition.cpp
CONVQUAD/AbsorbingBoundaryCondition/solutions_nolabels/: AbelIntegralEquation.cpp  AbsorbingBoundaryCondition.cpp
CONVQUAD/AbsorbingBoundaryCondition/templates/: AbelIntegralEquation.cpp  AbsorbingBoundaryCondition.cpp  absorbingboundarycondition.h  absorbingboundarycondition_main.cpp
CONVQUAD/AbsorbingBoundaryCondition/templates_nolabels/: AbsorbingBoundaryCondition.cpp  CMakeLists.txt
CONVQUAD/FractionalHeatEquation/: README.md
CONVQUAD/FractionalHeatEquation/all/: dependencies.cmake  (+4 more)
CONVQUAD/IECQ/: abeltest.m  cqrinvsqr.m
CONVQUAD/LowTriangToeplitz/: CMakeLists.txt  LowTriangToeplitz.cpp  description.json
CONVQUAD/TOEPLITZ/: toeplitz.cpp
HMAT/: CMakeLists.txt  build.cmake  ctree_test.cpp  is_admissible_test.cpp  low_rank_test.cpp  low_rank_test.cpp.autosave  nearfar_test.cpp  vnode_matrix_test.cpp
HMAT/CLUSTERING/: CMakeLists.txt  Clustering.cpp  clustering.h  clustertree.cpp  clustertree.h  clustertree_main.cpp  locallowrank.cpp  locallowrank.h  locallowrank_main.cpp  matrixpartition.cpp  matrixpartition.h  matrixpartition_main.cpp
HMAT/CLUSTERING_revised/: CMakeLists.txt  clustertree.cpp  clustertree.h  clustertree_main.cpp  locallowrank.h  matrixpartition.cpp  matrixpartition.h  matrixpartition_main.cpp  vismatpart.m
HMAT/EvalTrigPoly/: CMakeLists.txt  README.md
HMAT/GravitationalForces/: CMakeLists.txt
HMAT/HMAT_1D/: CMakeLists.txt  low_rank_test.cpp  low_rank_test_uni.cpp
HMAT/HMAT_2D/: CMakeLists.txt  axisofinertia.m  ctree_test.cpp  is_admissible_test.cpp  low_rank_test.cpp  nearfar_test.cpp  vnode_matrix_test.cpp
HMAT/HMAT_BEM/: CMakeLists.txt  is_admissible_test.cpp  low_rank_test.cpp  nearfar_test.cpp  vnode_matrix_test.cpp
HMAT/KernMatLLRApprox/: CMakeLists.txt
HMAT/KernMatLLRApprox_revised/: CMakeLists.txt  README.md
HMAT/LowRankMerge/: CMakeLists.txt  LowRankMerge.cpp  description.json
HMAT/PARTMAT/: CMakeLists.txt  PatMatMain.cpp
HMAT/TensorProductChebIntp/: README.md
HMAT/include/: CMakeLists.txt  block_cluster.hpp  ctree.hpp  global_interpolation_app.hpp  is_admissible.hpp  kernel.hpp  low_rank_app.hpp  node.hpp  point.hpp
HMAT/src/: CMakeLists.txt  block_cluster.cpp  ctree.cpp  is_admissible.cpp  is_admissible_test.cpp.autosave  kernel.cpp  low_rank_app.cpp  node.cpp
(+634 files in other folders)
